[package]
name = "rust_poker"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = {version = "0.8.5", features = ["small_rng"]}
itertools = "0.13.0"
lazy_static = "1.5.0"
concurrent-queue = "2.5.0"
serde = "1.0.217"
serde_json = "1.0.134"
flate2 = "1.0.35"
base64 = "0.22.1"
dashmap = "6.1.0"
rayon = "1.10.0"
indicatif = {version = "0.17.9", features = ["rayon"]}

[dev-dependencies]
rstest = "0.11.0"

[[bin]]
name = "rust_poker"
path = "src/main.rs"

[lints.clippy]
needless_range_loop = "allow"